finish implementation of matchmaking simple algo + update routing for generating matches for users
